--- a/resources/assets/styles/skhoop/sections/_instagram.scss
+++ b/resources/assets/styles/skhoop/sections/_instagram.scss
@@ -1,4 +1,3 @@
-
 .instagram-gallery {
   overflow-x: hidden;
   padding-top: 4.375rem;
@@ -26,6 +25,7 @@
 
   .col-side {
     @include flex( 1 0 0 );
+    @include oneline-flex( 1, 0, 0 );
   }
 
   .tile-group {
@@ -37,25 +37,21 @@
     padding-left: calc(3.712% / 2);
     padding-top: calc(( (25% * 3) - 11.595%) - (50% - 3.712%));
     margin-left: -25%;
-
     @include flex(0 0 calc(100% - ( 3.712% / 2) ));
+    @include oneline-flex(0, 0, calc(100% - ( 3.712% / 2) ));
 
     @include media-breakpoint-up(lg) {
       padding-left: 15px;
       padding-top: calc(( (25% * 3) - 93px) - (50% - 30px));
 
       @include flex(0 0 calc(100% - 15px ));
+      @include oneline-flex(0, 0, calc(100% - 15px ));
     }
   }
 
   .instagram-info-margin {
-    margin-bottom: -7.8%;
     position: relative;
     z-index: 1;
-
-    @include media-min(1441px) {
-      margin-bottom: -5.75%;
-    }
   }
 
   .instagram-info {
@@ -93,13 +89,16 @@
   .tile {
     @include relate-aspect-ratio;
     @include flex( 0 0 calc(25% - 3.712%) );
+    @include oneline-flex(0, 0, calc(25% - 3.712%));
 
     padding-top: calc(25% - 3.712%);
     margin: calc(3.712% / 2);
     background-color: $lightGreen;
 
     @include media-breakpoint-up(lg) {
-      @include flex( 0 0 calc(25% - 30px) );
+
+      // @include flex( 0 0 calc(25% - 30px) );
+      @include oneline-flex(0, 0, calc(25% - 30px) );
 
       padding-top: calc(25% - 30px);
       margin: 15px;
@@ -107,11 +106,13 @@
 
     &.is-three {
       @include flex( 0 0 calc( (25% * 3) - 11.595%) );
+      @include oneline-flex(0, 0, calc( (25% * 3) - 11.595%));
 
       padding-top: calc((25% * 3) - 11.595%);
 
       @include media-breakpoint-up(lg) {
         @include flex(0 0 calc( (25% * 3) - 93px));
+        @include oneline-flex(0, 0, calc( (25% * 3) - 93px));
 
         padding-top: calc((25% * 3) - 93px);
       }
@@ -120,11 +121,13 @@
 
   .tile-block {
     @include flex( 0 0 calc(25% - 3.712%) );
+    @include oneline-flex( 0, 0, calc(25% - 3.712%) );
 
     margin: calc(3.712% / 2);
 
     @include media-breakpoint-up(lg) {
       @include flex( 0 0 calc(25% - 30px) );
+      @include oneline-flex(0, 0, calc(25% - 30px) );
 
       margin: 15px;
     }
