Selected product accordion

--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -42,6 +42,7 @@ $theme-colors: (
   "danger":                    $danger,
   "ash":                       $ash,
   "lightgreen":                $lightGreen,
+  "red":                $red,
 );
 
 // Responsive font size breakpoint
