--- a/resources/assets/styles/skhoop/sections/_selected-product.scss
+++ b/resources/assets/styles/skhoop/sections/_selected-product.scss
@@ -127,7 +127,21 @@
     .accordion {
       .header {
         cursor: pointer;
-        padding: 0.625rem 0;
+        padding: 1.3125rem 0;
+      }
+
+      .header .btn-icon {
+        transform: rotate(180deg);
+        transition: all 200ms cubic-bezier(0.19, 1, 0.22, 1);
+
+        @include media-max(991px) {
+          width: 25px;
+          height: 25px;
+        }
+      }
+
+      .header.collapsed .btn-icon {
+        transform: rotate(0deg);
       }
 
       .header span {
@@ -137,7 +151,6 @@
       }
 
       .body {
-        padding-bottom: 1.25rem;
         font-size: 14px;
         font-weight: 300;
         letter-spacing: 0.5px;
