--- a/resources/assets/styles/skhoop/sections/_promo-box.scss
+++ b/resources/assets/styles/skhoop/sections/_promo-box.scss
@@ -1,6 +1,10 @@
 .promo-box {
     &-name {
       margin-bottom: 0.3125rem;
+      display: -webkit-box;
+      -webkit-line-clamp: 1;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
     }
 
     &-item {
@@ -9,6 +13,12 @@
         $i: $i + 1;
         &:nth-child(#{$i}) {
           background-color: $color;
+        }
+
+        &,
+        &:hover {
+          color: $body-color;
+          text-decoration: none;
         }
       }
 
@@ -36,6 +46,10 @@
       letter-spacing: 1px;
       line-height: 20px;
       margin-bottom: 2.4375rem;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
 
       @include media-breakpoint-up(md) {
         margin-bottom: 2.625rem;
