--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -147,12 +147,16 @@ $input-btn-padding-x-sm:      0.5rem;
 $input-btn-padding-y-lg:      0.9375rem;
 $input-btn-padding-x-lg:      1rem;
 
+$btn-font-weight:             500;
+
 // Allows for customizing button radius independently from global border radius
-$border-radius:               1.1875rem;
+$border-radius:               1.25rem;
 $border-radius-sm:            0.9375rem;
 $border-radius-lg:            9.375rem;
 
-$btn-font-weight:             500;
+$btn-border-radius:           $border-radius;
+$btn-border-radius-lg:        $border-radius-lg;
+$btn-border-radius-sm:        $border-radius-sm;
 
 // Forms & Form Controls
 $input-height-lg:             3.125rem;
