Size Guide HTML

--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -38,3 +38,4 @@
 @import "sections/selected-product";
 @import "sections/text-button";
 @import "sections/instagram";
+@import "sections/size-guide";
