--- a/resources/assets/styles/skhoop/layouts/_footer.scss
+++ b/resources/assets/styles/skhoop/layouts/_footer.scss
@@ -111,7 +111,7 @@
 
   .trust-item {
     padding-left: 3.75rem;
-    min-height: 4.1875rem;
+    min-height: 3.5625rem;
     position: relative;
     width: 14.375rem;
     margin-left: auto;
@@ -126,12 +126,13 @@
       text-align: left;
 
       .h4 {
+        margin-top: 0.1875rem;
         margin-bottom: 0;
+        line-height: 1rem;
       }
 
       .small {
         @include media-breakpoint-up(md) {
-          margin-top: -0.4375rem;
         }
       }
     }
@@ -145,7 +146,7 @@
       }
 
       @include media-breakpoint-up(lg) {
-        margin-left: 4.5rem;
+        margin-left: 3.9375rem;
       }
     }
   }
@@ -154,7 +155,7 @@
     width: 2.5rem;
     height: 2.5rem;
     position: absolute;
-    top: 0.875rem;
+    top: 0.625rem;
     left: 0;
     margin-top: 0;
 
