--- a/resources/assets/styles/skhoop/sections/_fifty-fifty-section.scss
+++ b/resources/assets/styles/skhoop/sections/_fifty-fifty-section.scss
@@ -41,8 +41,13 @@
 
     @include media-breakpoint-up(md) {
       width: 100%;
-      padding-bottom: 1rem;
-      padding-top: 1rem;
+      padding-bottom: 2rem;
+      padding-top: 2rem;
+    }
+
+    @include media-breakpoint-up(lg) {
+      padding-bottom: 3rem;
+      padding-top: 3rem;
     }
 
     @include media-breakpoint-up(xl) {
