--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -195,3 +195,8 @@ $modal-content-border-radius: 0.3125rem;
 
 // Promo box colors
 $promo-box-colors: ($white, rgba(235, 227, 207, 0.25), rgba(218, 180, 180, 0.25));
+
+// Spinners
+
+$spinner-width:         3rem;
+$spinner-height:        3rem;
