Popular Products JS update.

--- a/resources/assets/styles/skhoop/components/_picker.scss
+++ b/resources/assets/styles/skhoop/components/_picker.scss
@@ -90,6 +90,7 @@
 
     .custom-control-input:checked ~ .custom-control-label {
       background-color: $body-color;
+      border: 0.0625rem solid $body-color;
 
       span {
         color: $white;
