--- a/resources/assets/styles/skhoop/sections/_product-listing.scss
+++ b/resources/assets/styles/skhoop/sections/_product-listing.scss
@@ -213,6 +213,7 @@
   }
 
   &-details {
+    margin-top: -0.0625rem;
     color: $body-color;
     border-bottom-right-radius: 0.3125rem;
     border-bottom-left-radius: 0.3125rem;
