--- a/resources/assets/styles/skhoop/layouts/_header.scss
+++ b/resources/assets/styles/skhoop/layouts/_header.scss
@@ -240,14 +240,19 @@ $mobile-margin-top-menu: 3.75rem;
 
 .navbar-collapse {
   @include media-breakpoint-down(md) {
+    display: block;
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
     width: 100%;
     max-width: 23.4375rem;
-    height: 100vh !important;
-    overflow-y: auto;
+    height: 100vh;
+    max-height: 100vh !important;
+    overflow: auto;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
+    overscroll-behavior: contain;
     margin-top: $mobile-margin-top-menu;
     background-color: $green;
   }
