Popular Product JS

--- a/resources/assets/styles/skhoop/layouts/_header.scss
+++ b/resources/assets/styles/skhoop/layouts/_header.scss
@@ -308,6 +308,10 @@ $mobile-margin-top-menu: 3.75rem;
 }
 
 .nav-overlay {
+  @include media-breakpoint-down(md) {
+    overflow: hidden !important;
+  }
+
 	&:after {
     content: "";
     position: fixed;
