--- a/resources/assets/styles/skhoop/layouts/_header.scss
+++ b/resources/assets/styles/skhoop/layouts/_header.scss
@@ -241,9 +241,9 @@ $mobile-margin-top-menu: 3.75rem;
 .navbar-collapse {
   @include media-breakpoint-down(md) {
     display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
+    position: absolute;
+    top: -5px;
+    left: -30px;
     bottom: 0;
     width: 100%;
     max-width: 23.4375rem;
