--- a/resources/assets/styles/skhoop/layouts/_header.scss
+++ b/resources/assets/styles/skhoop/layouts/_header.scss
@@ -371,13 +371,13 @@ $mobile-margin-top-menu: 3.75rem;
     }
   }
 
-  .navbar-collapse {
-    @include media-breakpoint-down(md) {
-      margin-top: 5.75rem;
-    }
+  // .navbar-collapse {
+  //   @include media-breakpoint-down(md) {
+  //     margin-top: 5.75rem;
+  //   }
 
-    @include media-max(782px) {
-      margin-top: 6.625rem;
-    }
-  }
+  //   @include media-max(782px) {
+  //     margin-top: 6.625rem;
+  //   }
+  // }
 }
