--- a/resources/assets/styles/skhoop/sections/_checkout.scss
+++ b/resources/assets/styles/skhoop/sections/_checkout.scss
@@ -85,7 +85,9 @@
     }
 
     .btn {
+      max-width: 11.3125rem;
       min-width: 11.3125rem;
+      text-transform: none;
     }
 
     .form-control {
