Size selector text alignment

--- a/resources/assets/styles/skhoop/sections/_selected-product.scss
+++ b/resources/assets/styles/skhoop/sections/_selected-product.scss
@@ -273,6 +273,11 @@
       }
     }
   }
+
+  // Overide
+  .custom-control .custom-control-label > span {
+    margin-top: 0;
+  }
 }
 
 //  Custom plugin
