--- a/resources/assets/styles/skhoop/sections/_product-filter.scss
+++ b/resources/assets/styles/skhoop/sections/_product-filter.scss
@@ -56,7 +56,12 @@
   left: 0;
   z-index: 1051;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  max-height: 100vh !important;
+  overflow: auto;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
+  overscroll-behavior: contain;
   padding: 0 1.875rem 1.25rem;
   background-color: $body-bg;
 
