Navigation Mobile & Product Filter CSS update.

--- a/resources/assets/styles/skhoop/layouts/_header.scss
+++ b/resources/assets/styles/skhoop/layouts/_header.scss
@@ -387,3 +387,13 @@ body:not(.AndroidOS):not(.isApple) {
     }
   }
 }
+
+body.isApple {
+  .navbar {
+    .content-info {
+      .brand-container {
+        margin-bottom: 5rem;
+      }
+    }
+  }
+}
