--- a/resources/assets/styles/skhoop/sections/_checkout.scss
+++ b/resources/assets/styles/skhoop/sections/_checkout.scss
@@ -43,7 +43,7 @@
   .checkout-iframe {
     width: 100%;
     margin-top: 1.875rem;
-    
+
     @include media-breakpoint-up(md) {
       margin-top: 1.875rem;
     }
@@ -128,6 +128,14 @@
         @include media-breakpoint-up(md) {
           border-bottom: 1px solid $white;
         }
+      }
+    }
+  }
+
+  .custom-radio {
+    .custom-control-label {
+      span {
+        font-weight: $font-weight-medium;
       }
     }
   }
