Promo Box padding

--- a/resources/assets/styles/skhoop/sections/_promo-box.scss
+++ b/resources/assets/styles/skhoop/sections/_promo-box.scss
@@ -37,6 +37,10 @@
     padding: 1rem 0;
     height: 100%;
 
+    @include media-breakpoint-up(md) {
+      padding: 2.1875rem 0;
+    }
+
     .btn-icon {
       background-color: $white;
     }
