--- a/resources/assets/styles/skhoop/layouts/_header.scss
+++ b/resources/assets/styles/skhoop/layouts/_header.scss
@@ -247,7 +247,7 @@ $mobile-margin-top-menu: 3.75rem;
     bottom: 0;
     width: 100%;
     max-width: 23.4375rem;
-    height: 100vh;
+    height: 100vh !important;
     max-height: 100vh !important;
     overflow: auto;
     overflow-x: hidden;
