--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -39,3 +39,4 @@
 @import "sections/text-button";
 @import "sections/instagram";
 @import "sections/size-guide";
+@import "sections/breadcrumb-vertical";
