--- a/resources/assets/styles/skhoop/components/_picker.scss
+++ b/resources/assets/styles/skhoop/components/_picker.scss
@@ -79,7 +79,7 @@
     .custom-control-label[style*="#ffffff"],
     .custom-control-label[style="#fff"],
     .custom-control-label[style="rgb(255, 255, 255)"]     {
-      border: 1px solid $green;
+      border: 0.0625rem solid $green;
     }
 
     .custom-control-input:checked ~ .custom-control-label {
