updated selected product markup

--- a/resources/assets/styles/skhoop/sections/_selected-product.scss
+++ b/resources/assets/styles/skhoop/sections/_selected-product.scss
@@ -247,7 +247,7 @@
       width: 70px;
       height: 106px;
       margin: 0.3125rem auto;
-      padding: 1.4375rem 0.9375rem 1.4375rem;
+      // padding: 1.4375rem 0.9375rem 1.4375rem;
       border-radius: 5px;
       box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
       cursor: pointer;
