--- a/resources/assets/styles/common/_mixins.scss
+++ b/resources/assets/styles/common/_mixins.scss
@@ -26,7 +26,7 @@
     height: 100%;
     width: 100%;
     margin: auto; //center left, right
-    object-fit: cover; //act like background-size: cover if supported
+    //object-fit: cover; //act like background-size: cover if supported
   }
 
   > iframe {
@@ -66,7 +66,7 @@
     height: 100%;
     width: 100%;
     margin: auto; //center left, right
-    object-fit: cover; //act like background-size: cover if supported
+    //object-fit: cover; //act like background-size: cover if supported
   }
 
   > iframe {
@@ -102,7 +102,7 @@
     height: 100%;
     width: 100%;
     margin: auto; //center left, right
-    object-fit: cover; //act like background-size: cover if supported
+    //object-fit: cover; //act like background-size: cover if supported
   }
 }
 
